--- a/coroutineshub/presentation/src/main/res/values/themes.xml
+++ b/coroutineshub/presentation/src/main/res/values/themes.xml
@@ -1,16 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
+	<style name="Theme.App.Starting" parent="Theme.SplashScreen">
+		<item name="windowSplashScreenBackground">@color/black</item>
+		<item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+		<item name="windowSplashScreenAnimationDuration">1000</item>
+		<item name="postSplashScreenTheme">@style/Theme.App</item>
+		<item name="android:forceDarkAllowed" tools:targetApi="29">false</item>
+	</style>
+
 	<!-- Base application theme. -->
-	<style name="Theme.Coroutineshub" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.App" parent="Theme.MaterialComponents.Light.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
+		<item name="colorPrimary">@color/purple_200</item>
+		<item name="colorPrimaryVariant">@color/purple_500</item>
 		<item name="colorOnPrimary">@color/white</item>
 		<!-- Secondary brand color. -->
 		<item name="colorSecondary">@color/teal_200</item>
 		<item name="colorSecondaryVariant">@color/teal_700</item>
 		<item name="colorOnSecondary">@color/black</item>
+
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-		<!-- Customize your theme here. -->
 	</style>
+
 </resources>
